# elf-bloat

./: CLAUDE.md  Cargo.toml  README.md  TODO.md
src/: lib.rs  main.rs  output.rs
src/elf/: diff_engine.rs  mod.rs  symbol_diff.rs  symbols.rs
src/elf/parsers/: goblin.rs  mod.rs  native.rs  nm.rs
src/runner/: build_engine.rs  diff_engine.rs  mod.rs  process.rs  symbol_diff.rs
src/runner/parsers/: goblin.rs  native.rs  nm.rs
