[package]
name = "elf_bloat"
version = "0.9.0"
edition = "2024"
description = "View size of individual symbols in an elf file and compare two elf files."
license = "Apache-2.0"
repository = "https://github.com/andy31415/elf-bloat"
readme = "README.md"
keywords = ["embedded", "dwarf", "disassembly", "elf"]
categories = ["command-line-utilities", "development-tools::debugging"]

[[bin]]
name = "elf-bloat"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
color-eyre = "0.6.5"
cpp_demangle = "0.4"
csv = "1.3"
env_logger = "0.11.3"
eyre = "0.6.12"
elf = "0.7"
goblin = "0.10.5"
log = "0.4.21"
owo-colors = "4.3.0"
tracing = "0.1"
which = "6.0"

[dev-dependencies]
tempfile = "3"
