[package]
name = "elf_bloat"
version = "0.9.0"
edition = "2024"
description = "View size of individual symbols in an elf file and compare two elf files."
license = "Apache-2.0"
repository = "https://github.com/andy31415/elf-bloat"
readme = "README.md"
keywords = ["embedded", "dwarf", "disassembly", "elf"]
categories = ["command-line-utilities", "development-tools::debugging"]

[[bin]]
name = "elf-bloat"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
color-eyre = "0.6.5"
cpp_demangle = "0.5.1"
csv = "1.4.0"
env_logger = "0.11.10"
eyre = "0.6.12"
elf = "0.8.0"
goblin = "0.10.5"
log = "0.4.29"
tracing = "0.1.44"
which = "8.0.2"

[dev-dependencies]
tempfile = "3.27.0"
